Fix visual bug on monitor list (tag column not aligned).

--- a/frontend/resources/styles/main/09-monitor-list.css
+++ b/frontend/resources/styles/main/09-monitor-list.css
@@ -167,12 +167,16 @@
 
       .monitor-tags {
         width: 200px;
-        display: block;
-
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
+        display: flex;
+        align-items: center;
         margin-right: 20px;
+
+        span {
+          display: inline-block;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+        }
       }
 
       .monitor-updated {
